--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prettier": "prettier --config .prettierrc '*.js' --write",
-    "lint": "eslint . --ext .js"
-    "prettier": "prettier --config .prettierrc 'Node/**/*.js' --write",
+    "lint": "eslint . --ext .js",
+    "build": "npx tsc"
   },
   "repository": {
     "type": "git",
@@ -24,11 +24,8 @@
   "homepage": "https://github.com/edisonrenato/er01#readme",
   "devDependencies": {
     "eslint": "^8.22.0",
-    "prettier": "^2.7.1"
-  },
-  "dependencies": {
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "eslint": "^8.22.0"
