--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/edisonrenato/er01#readme",
   "devDependencies": {
+    "@types/node": "^18.7.11",
     "eslint": "^8.22.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
