--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "eslint": "^8.22.0"
+    "eslint": "^8.22.0",
+    "ts-node": "^10.9.1"
   }
 }
