--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prettier": "prettier --config .prettierrc '*.js' --write",
     "lint": "eslint . --ext .js",
     "build": "npx tsc",
-    "jasmine": "jasmine"
+    "jasmine": "jasmine",
+    "test": "npm run build && npm run jasmine"
   },
   "repository": {
     "type": "git",
